@@ -1,7 +1,7 @@
 <h2><%=l(:label_overview)%></h2> 
 	
 <div class="splitcontentleft">
-	<%= simple_format(auto_link(h @project.description)) %>	
+	<%= simple_format(auto_link(h(@project.description))) %>	
 	<ul>
 	<% unless @project.homepage.empty? %><li><%=l(:field_homepage)%>: <%= auto_link @project.homepage %></li><% end %>
 	<li><%=l(:field_created_on)%>: <%= format_date(@project.created_on) %></li>
